--- a/css/style.css
+++ b/css/style.css
@@ -247,11 +247,12 @@ body {
    font-family: 'Source Sans Pro', sans-serif;
 }
 
-h1 {
+#title {
   font-weight: bold;
   font-style: italic;
-  margin-bottom: 10px;
-  font-size: 2.5em;
+  margin-bottom: 50px;
+  font-size: 5.25em;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 p {
@@ -271,6 +272,9 @@ fieldset {
   margin-top: 20px;
 }
 
+#p1 {
+  margin-bottom: 5px;
+}
 #submit {
   margin-top: 20px;
 }
