--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ html {
 }
 
 body {
-   font-family: 'Source Sans Pro', sans-serif;
+   font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
 }
 
 #title {
@@ -252,16 +252,16 @@ body {
   font-style: italic;
   margin-bottom: 45px;
   font-size: 3.25em;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
 }
 
 p {
-  font-family: 'Noto Sans', sans-serif;
+  font-family: 'Noto Sans', Helvetica, Arial, sans-serif;
   margin-bottom: 20px;
 }
 
 ol {
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Roboto Condensed', Helvetica, Arial, sans-serif;
 }
 
 label {
